infra/base/fe_route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: frontend
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: "Host(``, `www.lineswithlinks.com`)"
      services:
        - name: frontend
          port: 80
